bg bleed fix (bg on body only)

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-html,
 body {
     background-image: url("./bg.jpg");
 }
@@ -20,4 +19,6 @@ body {
 .nets-logo {
     padding: 24px 0 0 24px;
     max-width: 100px;
+}
+
 }
